--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TG Application</title>
-    <link rel="stylesheet" href="/src/css/global.css">
+    <link rel="stylesheet" href="/src/css/global.css" />
   </head>
   <body>
     <div id="app"></div>
-    <div id="global-data" 
-      data-channels='[]'
-      data-groups='[]'
-      style="display:none;">
-    </div>
+    <div id="global-data" data-channels="[]" data-groups="[]" style="display: none"></div>
     <script type="module" src="/src/js/app.js"></script>
   </body>
 </html>
